--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": ">=18.19.0"
   },
   "dependencies": {
+    "@3reeb/state-letters-monitoring":"^0.0.1",
     "@payloadcms/db-mongodb": "3.0.0-beta.9",
     "@payloadcms/db-postgres": "3.0.0-beta.9",
     "@payloadcms/next": "3.0.0-beta.9",
