--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@3reeb/state-letters-monitoring":"^0.0.1",
+    "@3reeb/ui":"0.0.25",
     "@payloadcms/db-mongodb": "3.0.0-beta.9",
     "@payloadcms/db-postgres": "3.0.0-beta.9",
     "@payloadcms/next": "3.0.0-beta.9",
